fix: override Gutenberg column vertical alignment center bug

--- a/wp-content/themes/extendable/style.css
+++ b/wp-content/themes/extendable/style.css
@@ -554,3 +554,14 @@ input, textarea {
     pointer-events: none;
     z-index: 1;
 }
+
+/* Fix Gutenberg columns vertical alignment override bug */
+.wp-block-columns.are-vertically-aligned-center {
+	align-items: center !important;
+}
+.wp-block-columns.are-vertically-aligned-top {
+	align-items: flex-start !important;
+}
+.wp-block-columns.are-vertically-aligned-bottom {
+	align-items: flex-end !important;
+}
